--- a/project-b-template/index.html
+++ b/project-b-template/index.html
@@ -14,8 +14,8 @@
 
 </head>
 
-<body>
-  <div class="container-landing-page">
+<body class="body">
+  <div class="container-landing-page1">
     <h1>The Little World</h1>
     <p>
       <a href="main.html">
