--- a/project-b-template/main.html
+++ b/project-b-template/main.html
@@ -12,21 +12,135 @@
 </head>
 
 <body>
-  <!-- <div class="main-container" id="canvas-container1">
+
+  <div class="main-container" id="canvas-container">
     <script src="js/top-class/xiaojie/xiaojie.js"></script>
   </div>
-  <div class="interface-container1">
+  <div class="interface-container">
     <button onclick="ChangeXiaojie()">Miss</button>
-  </div> -->
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <iframe src="js/top-class/king/king.html" width="640" height="425"></iframe>
+  </div>
+
+  <!-- <div class="main-container" id="canvas-container">
+    <script src="js/top-class/gui/gui.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeGui()">Juno</button>
+  </div>
+
+
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/upper-class/bri/bri.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeBri()">Bribe</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/upper-class/ent/ent.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeEnt()">Entrepreneur</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/upper-class/fu/fu.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeFu()">Rich-secend</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/upper-class/gang/gang.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeGang()">Gang</button>
+  </div>
+
+
 
   <div class="main-container" id="canvas-container">
     <script src="js/middle-class/ast/ast.js"></script>
   </div>
-
   <div class="interface-container">
     <button onclick="ChangeAst()">Astronaut</button>
   </div>
 
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/ath/ath.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeAth()">Athlete</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/clo/clo.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeClo()">Clown</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/mom/mom.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeMom()">Housewife</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/nong/nong.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeNong()">Farmer</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/pol/pol.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangePol()">Police</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/sing/sing.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeSing()">Singer</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/tea/tea.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeTea()">Teacher</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/middle-class/wor/wor.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeWor()">Staff</button>
+  </div>
+
+
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/low-class/bag/bag.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeBag()">Bagger</button>
+  </div>
+
+  <div class="main-container" id="canvas-container">
+    <script src="js/low-class/sle/sle.js"></script>
+  </div>
+  <div class="interface-container">
+    <button onclick="ChangeSle()">Wanderer</button>
+  </div> -->
 
 </body>
 
