--- a/project-b-template/index.html
+++ b/project-b-template/index.html
@@ -18,7 +18,7 @@
   <div class="container-landing-page1">
     <h1>The Little World</h1>
     <p>
-      <a href="main.html">
+      <a href="draft.html">
         Click here to start!!
       </a>
     </p>
