--- a/project-b-template/draft.html
+++ b/project-b-template/draft.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arial's Project B</title>
-    <link rel="stylesheet" href="project-b-template/css/style.css">
-    <script src="project-b-template/js/lib/p5.js"></script>
-    <script src="project-b-template/js/lib/p5.sound.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/lib/p5.js"></script>
+    <script src="js/lib/p5.sound.js"></script>
 </head>
 
 <body class="bodydraft">
