--- a/project-b-template/draft.html
+++ b/project-b-template/draft.html
@@ -15,76 +15,80 @@
     <div class="container-landing-page2">
         <!-- top-class -->
         <div class="flex-container-01">
-            <div class="box-010">King</div>
-            <div class="box-011">Juno</div>
-            <div class="box-012">Miss</div>
+            <div class="box-010">
+                Juno
+            </div>
+            <div class="box-011">
+                King
+            </div>
+            <div class="box-012">
+                Miss
+            </div>
         </div>
 
         <!-- upper-class -->
         <div class="flex-container-02">
-            <div class="box-020">Rich-secend</div>
-            <div class="box-021">Gang</div>
-            <div class="box-022">Bribe</div>
-            <div class="box-023">Entrepreneur</div>
+            <div class="box-020">
+                Rich-second
+            </div>
+            <div class="box-021">
+                Gang
+            </div>
+            <div class="box-022">
+                Bribe
+            </div>
+            <div class="box-023">
+                Enterprenuer
+            </div>
         </div>
 
         <!-- middle-class -->
         <div class="flex-container-03">
-            <div class="box-030">Astronaut</div>
-            <div class="box-031">Athlete</div>
-            <div class="box-032">Clown</div>
+            <div class="box-030">
+                Astronaught
+            </div>
+            <div class="box-031">
+                Athlete
+            </div>
+            <div class="box-032">
+                Clown
+            </div>
         </div>
 
         <div class="flex-container-04">
-            <div class="box-040">Housewife</div>
-            <div class="box-041">Farmer</div>
-            <div class="box-042">Police</div>
+            <div class="box-040">
+                Housewife
+            </div>
+            <div class="box-041">
+                Farmer
+            </div>
+            <div class="box-042">
+                Police
+            </div>
         </div>
 
         <div class="flex-container-05">
-            <div class="box-050">Singer</div>
-            <div class="box-051">Teacher</div>
-            <div class="box-052">Staff</div>
+            <div class="box-050">
+                Singer
+            </div>
+            <div class="box-051">
+                Teacher
+            </div>
+            <div class="box-052">
+                Staff
+            </div>
         </div>
 
         <!-- low-class -->
         <div class="flex-container-06">
-            <div class="box-060">Bagger</div>
-            <div class="box-061">Wanderer</div>
+            <div class="box-060">
+                Bagger
+            </div>
+            <div class="box-061">
+                Wanderer
+            </div>
         </div>
     </div>
-
-
-
-
-
-    <!-- <div class="main-container" id="canvas-container">
-        <div class="box1">
-            heihiehie
-        </div>
-    </div> -->
-    <!-- <div class="interface-container">
-        <button onclick="ChangeXiaojie()">Miss</button>
-    </div>-->
-
-    <!-- <div class="main-container" id="canvas-container">
-    </div>
-    <div class="interface-container">
-        <button onclick="ChangeXiaojie()">Miss</button>
-    </div>
-
-    <div class="main-container" id="canvas-container">
-    </div>
-    <div class="interface-container">
-        <button onclick="ChangeXiaojie()">Miss</button>
-    </div>
-
-    <div class="main-container" id="canvas-container">
-    </div>
-    <div class="interface-container">
-        <button onclick="ChangeXiaojie()">Miss</button>
-    </div> -->
-
 
 </body>
 
