--- a/project-b-template/main.html
+++ b/project-b-template/main.html
@@ -4,143 +4,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project</title>
-  <!-- <link rel="stylesheet" href="css/style.css"> -->
-
+  <title>Arial's Project B</title>
+  <link rel="stylesheet" href="css/style.css">
   <script src="js/lib/p5.js"></script>
   <script src="js/lib/p5.sound.js"></script>
 </head>
 
-<body>
+<body class="bodydraft">
+  <!-- ]top-class -->
+  <div class="container-landing-page2">
+    <!-- top-class -->
+    <div class="flex-container-01">
+      <div class="box-010">
+        <iframe src="js/top-class/gui/gui.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-011">
+        <iframe src="js/top-class/king/king.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-012">
+        <iframe src="js/top-class/xiaojie/xiaojie.html" width="300" height="300">
+        </iframe>
+      </div>
+    </div>
 
-  <div class="main-container" id="canvas-container">
-    <script src="js/top-class/xiaojie/xiaojie.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeXiaojie()">Miss</button>
-  </div>
+    <!-- upper-class -->
+    <div class="flex-container-02">
+      <div class="box-020">
+        <iframe src="js/upper-class/fu/fu.html" width="200" height="200">
+        </iframe>
+      </div>
+      <div class="box-021">
+        <iframe src="js/upper-class/gang/gang.html" width="200" height="200">
+        </iframe>
+      </div>
+      <div class="box-022">
+        <iframe src="js/upper-class/bri/bri.html" width="200" height="200">
+        </iframe>
+      </div>
+      <div class="box-023">
+        <iframe src="js/upper-class/ent/ent.html" width="200" height="200">
+        </iframe>
+      </div>
+    </div>
 
-  <div class="main-container" id="canvas-container">
-    <iframe src="js/top-class/king/king.html" width="640" height="425"></iframe>
-  </div>
+    <!-- middle-class -->
+    <div class="flex-container-03">
+      <div class="box-030">
+        <iframe src="js/middle-class/ast/ast.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-031">
+        <iframe src="js/middle-class/ath/ath.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-032">
+        <iframe src="js/middle-class/clo/clo.html" width="300" height="300">
+        </iframe>
+      </div>
+    </div>
 
-  <!-- <div class="main-container" id="canvas-container">
-    <script src="js/top-class/gui/gui.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeGui()">Juno</button>
-  </div>
+    <div class="flex-container-04">
+      <div class="box-040">
+        <iframe src="js/middle-class/mom/mom.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-041">
+        <iframe src="js/middle-class/nong/nong.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-042">
+        <iframe src="js/middle-class/pol/pol.html" width="300" height="300">
+        </iframe>
+      </div>
+    </div>
 
+    <div class="flex-container-05">
+      <div class="box-050">
+        <iframe src="js/middle-class/sing/sing.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-051">
+        <iframe src="js/middle-class/tea/tea.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-052">
+        <iframe src="js/middle-class/wor/wor.html" width="300" height="300">
+        </iframe>
+      </div>
+    </div>
 
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/upper-class/bri/bri.js"></script>
+    <!-- low-class -->
+    <div class="flex-container-06">
+      <div class="box-060">
+        <iframe src="js/low-class/bag/bag.html" width="300" height="300">
+        </iframe>
+      </div>
+      <div class="box-061">
+        <iframe src="js/low-class/sle/sle.html" width="600" height="300">
+        </iframe>
+      </div>
+    </div>
   </div>
-  <div class="interface-container">
-    <button onclick="ChangeBri()">Bribe</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/upper-class/ent/ent.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeEnt()">Entrepreneur</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/upper-class/fu/fu.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeFu()">Rich-secend</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/upper-class/gang/gang.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeGang()">Gang</button>
-  </div>
-
-
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/ast/ast.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeAst()">Astronaut</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/ath/ath.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeAth()">Athlete</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/clo/clo.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeClo()">Clown</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/mom/mom.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeMom()">Housewife</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/nong/nong.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeNong()">Farmer</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/pol/pol.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangePol()">Police</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/sing/sing.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeSing()">Singer</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/tea/tea.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeTea()">Teacher</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/middle-class/wor/wor.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeWor()">Staff</button>
-  </div>
-
-
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/low-class/bag/bag.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeBag()">Bagger</button>
-  </div>
-
-  <div class="main-container" id="canvas-container">
-    <script src="js/low-class/sle/sle.js"></script>
-  </div>
-  <div class="interface-container">
-    <button onclick="ChangeSle()">Wanderer</button>
-  </div> -->
 
 </body>
 
