--- a/project-b-template/ast.html
+++ b/project-b-template/ast.html
@@ -14,7 +14,7 @@
 <body>
     <script src="js/ast.js"></script>
     <div class="interface-container">
-        <button onclick="ChangeAst()">Astronaut</button>
+        <button id="emotionButton" onclick="ChangeAst()">Astronaut</button>
     </div>
 </body>
 
