--- a/project-b-template/main.html
+++ b/project-b-template/main.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/lib/p5.js"></script>
   <script src="js/lib/p5.sound.js"></script>
+  <!-- <script src="js/main.js"></script> -->
 </head>
 
 <body class="bodydraft">
