--- a/project-b-template/bag.html
+++ b/project-b-template/bag.html
@@ -14,7 +14,7 @@
 <body>
     <script src="js/bag.js"></script>
     <div class="interface-container">
-        <button onclick="ChangeBag()">Bagger</button>
+        <button onclick="ChangeBag()">Begger</button>
     </div>
 </body>
 
