--- a/project-b-template/main-index.html
+++ b/project-b-template/main-index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arial's Project B</title>
     <link
-        href="https://fonts.googleapis.com/css2?family=Pacifico&family=Righteous&family=Sacramento&family=Zeyada&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Pacifico&family=Righteous&family=Rubik+Bubbles&family=Sacramento&family=Zeyada&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="lib/p5.js"></script>
@@ -18,8 +18,8 @@
     <div class="container-landing-page1">
         <h1>The Little World</h1>
         <p>
-            <a href="main.html">
-                Click here to start!!
+            <a href="intro.html">
+                Go to introduction!!
             </a>
         </p>
         <script src="js/desk.js"></script>
