--- a/project-b-template/intro.html
+++ b/project-b-template/intro.html
@@ -16,7 +16,7 @@
 <body class="bodydraft2">
     <div class="body2">
         <div class="container-landing-page3">
-            <h1 class="hhh1">Introduction</h1>
+            <h1 class="head">Introduction</h1>
             <p>
                 This is a collection of different characters in four levels of social hierarchies.
             </p>
