--- a/project-b-template/main.html
+++ b/project-b-template/main.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arial's Project B</title>
   <link rel="stylesheet" href="css/style.css">
-  <script src="js/lib/p5.js"></script>
-  <script src="js/lib/p5.sound.js"></script>
-  <!-- <script src="js/main.js"></script> -->
+  <script src="lib/p5.js"></script>
+  <script src="lib/p5.sound.js"></script>
+  <script src="main.js"></script>
 </head>
 
 <body class="bodydraft">
@@ -109,6 +109,62 @@
     </div>
   </div>
 
+
+  <!-- dialogues -->
+  <div class="dial" id="dial-01">
+    HAHAHA! Definitely! I am the most beautiful woman in the world!
+  </div>
+  <div class="dial" id="dial-02">
+    When I was born, a double rainbow appeared in the sky! LMAO
+  </div>
+  <div class="dial" id="dial-03">
+    Ooooo, this wine tastes so goooooood!
+  </div>
+  <div class="dial" id="dial-04">
+    Come and play~ MY TREAT~
+  </div>
+  <div class="dial" id="dial-05">
+    HAHA! Look who is here~ poor guy~
+  </div>
+  <div class="dial" id="dial-06">
+    Sure, I will save you the position~
+  </div>
+  <div class="dial" id="dial-07">
+    Rivals? Oh, please, they're just chasing my shadow. I am unique.
+  </div>
+  <div class="dial" id="dial-08">
+    I think I'm the only astronaut lost in the universe.
+  </div>
+  <div class="dial" id="dial-09">
+    I can't even sweat enough for this huge workload...
+  </div>
+  <div class="dial" id="dial-10">
+    You will never know how it feels when they laugh at you...
+  </div>
+  <div class="dial" id="dial-11">
+    Who cares, I am not born to be a cook~
+  </div>
+  <div class="dial" id="dial-12">
+    It seems that there is no harvest this year.
+  </div>
+  <div class="dial" id="dial-13">
+    Water!! I need water!!!
+  </div>
+  <div class="dial" id="dial-14">
+    My throat needs to rest, but I have another perfomance tomorrow...
+  </div>
+  <div class="dial" id="dial-15">
+    Aurhhhhhhh, naught kids....
+  </div>
+  <div class="dial" id="dial-16">
+    Heyyyyyy, come back my bus, I'm going to be late!!!!!
+  </div>
+  <div class="dial" id="dial-17">
+    Lots of bottles~ I can earn more~
+  </div>
+  <div class="dial" id="dial-18">
+    U R ON MY WAY TO SLEEEEEEEEEEP!
+  </div>
 </body>
 
 </html>
