--- a/project-b-template/main.html
+++ b/project-b-template/main.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arial's Project B</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Acme&family=Black+Ops+One&family=Courgette&family=Dhurjati&family=Ephesis&family=Gloria+Hallelujah&family=IBM+Plex+Mono:ital,wght@1,100&family=Kalam&family=Kanit:ital@1&family=Lobster&family=Lora:ital,wght@1,600&family=Merriweather:ital@1&family=Noto+Serif:ital,wght@1,500&family=Nova+Square&family=Orbitron&family=Pacifico&family=Permanent+Marker&family=Potta+One&family=Questrial&family=Quicksand:wght@600&family=Rajdhani:wght@500&family=Righteous&family=Roboto+Condensed&family=Rubik+Bubbles&family=Sacramento&family=Shadows+Into+Light&family=Smooch&family=Vina+Sans&family=Zeyada&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="lib/p5.js"></script>
   <script src="lib/p5.sound.js"></script>
